# Domain-modeling-made-functional-and-Simplicity-in-Effective-Rust

./: .gitignore  Cargo.toml  README.md
migrations/: 20240506121352_create_payment_methods_master.down.sql  20240506121352_create_payment_methods_master.up.sql  20240506121353_create_service_types_master.down.sql  20240506121353_create_service_types_master.up.sql  20240506121354_create_restaurant_name_master.down.sql  20240506121354_create_restaurant_name_master.up.sql  20240506121444_create_restaurant_resource.down.sql  20240506121444_create_restaurant_resource.up.sql
src/: config.rs  main.rs  reservation.rs  todo.rs
src/config/: local.rs
src/reservation/: api_schemas.rs  timelines.rs  workflows.rs
src/reservation/actions/: validation_tasks.rs
src/reservation/data_models/: api_schemas.rs  entities.rs  values.rs
src/reservation/external_access/: restaurant_resource.rs
src/todo/: delete.rs  get.rs  list.rs  post.rs  put.rs
