[package]
name = "rust-fDDD-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.32.0", features = ["full"] }
utoipa = { version = "4.2.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
sqlx = { version = "0.7.4", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
dotenv = "0.15.0"
[features]
default = ["local"]
local = []
